--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,13 @@
 # testing
 /coverage
 
+# development
+/storybook-static
+
 # production
 /build
+build-storybook.log
+.eslintcache
 
 # misc
 .DS_Store
@@ -24,3 +29,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
